--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 
 
 <!--===================Home===============================================================================-->
-<div id="ShowHome" class="fakecontainer"></div>
-<div id="Home" class="container-fluid mainHome">
+<div id="ShowHome" class="container-fluid mainHome">
   <div class="container">
     <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-fade-design" data-interval="4000" data-ride="carousel">
       <ol class="carousel-indicators carousel-indicators-design">
@@ -122,7 +121,7 @@
           <div class="container">
                 <div class="carousel-caption">
                   <h2 class="carousel-title bounceInDown animated slow" style="color: #FF3300;">A penny is a lot of money, if you have not got a penny.</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow" style="color: #FF3300;">You can make the diffrence!</h4>
+                  <h4 class="carousel-subtitle bounceInUp animated slow" style="color: #FF3300;">You can make the difference!</h4>
                   <a href="#ShowDonate" class="btn btn-lg btn-yuva1 hidden-xs bounceInUp animated slow">DONATE NOW</a>
                 </div> <!-- /.carousel-caption -->
               </div>
@@ -167,11 +166,10 @@
 
 
 <!--===================About===============================================================================-->
-<div id="ShowAbout" class="fakecontainer"></div>
-<div id="About" class="container-fluid mainAbout">
+<div id="ShowAbout" class="container-fluid mainAbout">
   <div class="container">
     <div class="row  About">
-    <center><h2>ABOUT</h2></center> 
+    <h2 class="text-center">ABOUT</h2>
     <div>
       <p>We are a group of people with a common goal; to live in a way that we cause minimum harm, and live to do maximum good work. It's our understanding that physical pain is objectively bad. So for us, reducing pain, and nurturing changes that reduce pain is an objective good.</p>
       <p>युवा-समर्थन(Youth-Support) is an organization that takes care of stray animal or gives  protection, Feeding hungry people wandering in bus stands, government hospitals, and other places, Timely delivery of blood to the needy, Planting of trees, Education to child labour and Trying to curb the evil activities going on in the society. It started when the Corona epidemic was going on in the country, when people were upset, daily wage labourers were trying to go to their home, animals were not getting food due to lockdown, then we felt that now in the society, The time has come to serve in difficult circumstances and then a small group of us got engaged in such tasks.</p>
@@ -181,7 +179,6 @@
     </div>
   </div>
 </div>
-<div class="fakecontainer"></div>
 <!--===================About End============================================================================-->
 
 
@@ -189,25 +186,21 @@
 
 
 <!--===================Objective============================================================================-->
-<div id="ShowObjective" class="fakecontainer"></div>
-<div id="Objective" class="container-fluid mainObjective">
-  <div class="container">
-    <div class="Objective">
-      <center><h2>OBJECTIVE</h2></center>
-      <div>
-        <p>1. To work to strengthen and empower the society.</p>
-        <p>2. To work for the evils prevailing in the society and social upliftment.</p>
-        <p>3. Working for what the society has never considered to be his own.</p>
-        <p>4. To provide help to every needy person of the society according to his need.</p>
-        <p>5. Helping the stray animals on the way.</p>
-        <p>6. Helping the deranged person living in the society.</p>
-        <p>7. Provide proper education to orphans.</p>
-        <p>8. If any person of the society needs blood at any time, provide blood to them on time.</p>
-      </div>
+<div id="ShowObjective" class="container-fluid mainObjective">
+  <div class="container Objective">
+    <h2 class="text-center">OBJECTIVE</h2>
+    <div>
+    	<p>1. To work to strengthen and empower the society.</p>
+    	<p>2. To work for the evils prevailing in the society and social upliftment.</p>
+    	<p>3. Working for what the society has never considered to be his own.</p>
+    	<p>4. To provide help to every needy person of the society according to his need.</p>
+    	<p>5. Helping the stray animals on the way.</p>
+    	<p>6. Helping the deranged person living in the society.</p>
+    	<p>7. Provide proper education to orphans.</p>
+    	<p>8. If any person of the society needs blood at any time, provide blood to them on time.</p>
     </div>
   </div>
 </div>
-<div class="fakecontainer"></div>
 <!--===================Objective End======================================================================-->
 
 
@@ -215,10 +208,9 @@
 
 
 <!--===================Events==============================================================================-->
-<div id="ShowEvents" class="fakecontainer"></div>
-<div id="Events" class="container-fluid mainEvents">
+<div id="ShowEvents" class="container-fluid mainEvents">
 <div class="container Event">
-  <center><h2>EVENTS GALLERY</h2></center>
+  <h2 class="text-center">EVENTS GALLERY</h2>
   <div class="row eventcol1 align-content-center">
     <div class="col-3"><img src="logo_image.png"></div>
     <div class="col-3"><img src="logo_image.png"></div>
@@ -233,7 +225,6 @@
   </div>
 </div>
 </div>
-<div class="fakecontainer"></div>
 <!--===================Events End===========================================================================-->
 
 
@@ -241,11 +232,10 @@
 
 
 <!--===================FAQ==================================================================================-->
-<div id="ShowFAQ" class="fakecontainer"></div>
-<div class="container-fluid mainFAQ" >
-  <div class="container" >
-    <div class="row FAQ">
-      <center><h2>FAQ</h2></center>
+<div id="ShowFAQ" class="container-fluid mainFAQ" >
+  <div class="container  FAQ" >
+    <div class="row">
+      <h2 class="text-center">FAQ</h2>
 
       <div class="accordion" id="accordionExample">
         <div class="row" >
@@ -343,11 +333,9 @@
         </div>
       </div>
       </div>
-
     </div>
   </div>
 </div>
-<div class="fakecontainer"></div>
 <!--===================FAQ End============================================================================-->
 
 
@@ -355,20 +343,11 @@
 
 
 <!--===================Donate=============================================================================-->
-<div id="ShowDonate" class="fakecontainer"></div>
-<div class="container-fluid mainDonate">
-  <div class="container">
-    <div class="row Donate">
-      <center><h2>DONATE</h2></center>
-      
-
-
-      <div class="col-6 donatecol1"></div>
-      <div class="col-6 donatecol2"></div>
-    </div>
-  </div>
+<div id="ShowDonate" class="container-fluid mainDonate">
+	<div class="container Donate text-center">
+		<h2>DONATE</h2>
+	</div>
 </div>
-<div class="fakecontainer"></div>
 <!--===================Donate End=========================================================================-->
 
 
@@ -376,11 +355,9 @@
 
 
 <!--===================Contact==============================================================================-->
-<div id="ShowContact" class="fakecontainer"></div>
-<div class="container-fluid mainContact">
-  <div class="container">
-    <div class="Contact">
-      <center><h2>GET IN TOUCH</h2></center>
+<div id="ShowContact" class="container-fluid mainContact">
+  <div class="container Contact">
+      <h2 class="text-center">GET IN TOUCH</h2>
       <p>If you have questions about our events, don't hesitate, just call or put a message or send us a e-mail</p>
       <div class="row">
       <div class="col-sm-12  col-md-6">
@@ -402,7 +379,6 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
 <!--===================Contact End==========================================================================-->
 
