--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
       <div class="col-sm-12  col-md-6">
         <div class="container">
           <ul class="contactsec1" type="none">
-            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:" target="_blank" style="text-decoration: none">+91 7992328414</a></li>
-            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:" target="_blank" style="text-decoration: none">+91 8521173358</a></li>
-            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:" target="_blank" style="text-decoration: none">+91 7909098447</a></li>
-            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:" target="_blank" style="text-decoration: none">+91 8789095657</a></li>
-            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:" target="_blank" style="text-decoration: none">+91 9113315867</a></li>
+            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:+91 7992328414" target="_blank" style="text-decoration: none">+91 7992328414</a></li>
+            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:+91 8521173358" target="_blank" style="text-decoration: none">+91 8521173358</a></li>
+            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:+91 7909098447" target="_blank" style="text-decoration: none">+91 7909098447</a></li>
+            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:+91 8789095657" target="_blank" style="text-decoration: none">+91 8789095657</a></li>
+            <li><i class="fa fa-phone" style="font-size:15px;color:#FF3300;"></i><a href="tel:+91 9113315867" target="_blank" style="text-decoration: none">+91 9113315867</a></li>
           </ul>
         </div>
       </div>
